feat: Criado lista de maquinas - Client :rocket: Criado lista de maquinas cadastradas Adicionado acesso direto a criação, edição e exclusão de maquinas

--- a/client/src/app/maquinario/maquina/cad-maquina/cad-maquina.component.html
+++ b/client/src/app/maquinario/maquina/cad-maquina/cad-maquina.component.html
@@ -1,10 +1,7 @@
-<mat-card class="card-content">
-
-    <h3>{{isNew ? 'Cadastrar' : 'Alterar'}} Maquina</h3>
-    <form [formGroup]="form">
-
+    <form [formGroup]="form" class="card-content">
+        <h2>{{isNew ? 'Cadastrar' : 'Alterar'}} Maquina</h2>
         <p>
-            <mat-form-field class="field-80" appearance="standard">
+            <mat-form-field class="field-300" appearance="standard">
                 <mat-label>Nome</mat-label>
                 <input matInput  formControlName="nome" placeholder="exemplo: caminhão 03">
                 <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
@@ -12,7 +9,7 @@
             </mat-form-field>
         </p>
         <p>
-            <mat-form-field  class="field-80" appearance="standard">
+            <mat-form-field  class="field-300" appearance="standard">
                 <mat-label>Data da Aquisição</mat-label>
                 <input matInput  formControlName="ano" [matDatepicker]="picker">
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
@@ -20,7 +17,7 @@
             </mat-form-field>
         </p>
         <p>
-            <mat-form-field class="field-80" appearance="standard">
+            <mat-form-field class="field-262" appearance="standard">
                 <mat-label>Tipo de Maquinario</mat-label>
                 <mat-select formControlName="tipo" required>
                     <mat-option>--</mat-option>
@@ -31,20 +28,23 @@
                 <mat-error *ngIf="form.hasError('required')">Por favor escolha um tipo de maquinario</mat-error>
                 <mat-hint>{{form.value.tipo}}</mat-hint>
             </mat-form-field>
+            <button class="button-add" (click)="openAddTipoMaquinario()" mat-mini-fab color="green"><mat-icon>add</mat-icon></button>
         </p>
-        <p>
-            <mat-form-field class="field-80" appearance="standard">
+        <p class="button-flex-container">
+
+            <mat-form-field class="field-262" appearance="standard">
                 <mat-label>Modelo</mat-label>
                 <mat-select  formControlName="modelo" required>
                     <mat-option>--</mat-option>
-                    <mat-option *ngFor="let modeloMaquina of modeloMaquinas" [value]="modeloMaquina.modelo_maquina_id">
+                    <mat-option *ngFor="let modeloMaquina of modeloMaquinas" [value]="modeloMaquina">
                         {{modeloMaquina.nome}}
                     </mat-option>
                 </mat-select>
                 <mat-error *ngIf="form.hasError('required')">Por favor escolha um modelo de maquinario</mat-error>
                 <mat-hint>{{form.value?.modelo}}</mat-hint>
+
             </mat-form-field>
+            <button class="button-add" (click)="openAddModelo()" mat-mini-fab color="green"><mat-icon>add</mat-icon></button> 
         </p>
+        <button class="button-salvar" mat-raised-button (click)="isNew ? save() : update()" class="button-80" color="green">{{isNew ? 'Salvar' : 'Alterar'}}</button>
     </form>
-        <button mat-raised-button (click)="isNew ? save() : update()" class="button-80" color="green">{{isNew ? 'Salvar' : 'Alterar'}}</button>
-    </mat-card>
