--- a/client/src/app/maquinario/maquina/cad-maquina/cad-maquina.component.css
+++ b/client/src/app/maquinario/maquina/cad-maquina/cad-maquina.component.css
@@ -3,19 +3,12 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    width: 350px;
+    width: 400px;
+    padding: auto;
     max-width: 80%;
     margin: 10px auto;
 }
 
-.mat-green {
-    color: white;
-    background-color: rgb(2, 145, 2);
-}
-.mat-green:hover {
-    color: white;
-    background-color: rgba(2, 145, 2, 0.829);
-}
 
 .mat-cancel:hover {
     color: white;
@@ -27,14 +20,9 @@
     background-color: rgba(221, 221, 221, 0.842);
 }
 
-.field-80{
-    position: relative;
-    width: 300px;
-    margin: 0;
-    height: 50px;
-}
 
-button {
+
+.button-salvar {
     margin: 10px 10px;
     min-width: 100px
 }
@@ -45,4 +33,12 @@ button {
 mat-icon {
     color: rgb(107, 107, 107);
     margin-right: 10px;
+}
+
+.button-add { margin-left: 10px;}
+
+.button-add mat-icon{
+    margin: auto;
+    /* width: 120px; */
+    color: white;
 }
