--- a/client/src/app/maquinario/maquina/list-maquina/list-maquina.component.html
+++ b/client/src/app/maquinario/maquina/list-maquina/list-maquina.component.html
@@ -1,15 +1,69 @@
-<p>list-maquina works!!</p>
-
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table">
-    <ng-container *ngFor="let column of columns" [matColumnDef]="column.columnDef">
-      <th mat-header-cell *matHeaderCellDef>
-        {{column.header}}
-      </th>
-      <td mat-cell *matCellDef="let row">
-        {{column.cell(row)}}
-      </td>
-    </ng-container>
+<div class="container-table mat-elevation-z8">
+  <div class="loading-shade" *ngIf="isLoadingResults || isRateLimitReached">
+    <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+  </div>
   
+  <mat-form-field>
+    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filtro de pesquisa">
+  </mat-form-field>
+  <!-- <button routerLink="/main/maquina/cad-maquina"  class="button-add" mat-fab color="darkgreen"> -->
+  <button (click)="openCadMaquina()"  class="button-add" mat-fab color="darkgreen">
+    <mat-icon>add</mat-icon>
+  </button>
+  <table mat-table [dataSource]="dataSource" matSort>
+    
+
+    <ng-container matColumnDef="nome">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Nome </th>
+      <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
+    </ng-container>
+    
+    <ng-container matColumnDef="data">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Data de Aquisição </th>
+      <td mat-cell *matCellDef="let element"> {{element.ano | date: 'longDate'}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="tipo">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Tipo </th>
+      <td mat-cell *matCellDef="let element"> {{element.tipo}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="marca">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Marca </th>
+      <td mat-cell *matCellDef="let element"> {{element.modelo_maquina_id}} </td>
+    </ng-container>"
+
+    <ng-container matColumnDef="modelo">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Modelo </th>
+      <td mat-cell *matCellDef="let element"> {{element.modelo_maquina.nome}} </td>
+    </ng-container>
+    <ng-container matColumnDef="acao">
+      <th mat-header-cell *matHeaderCellDef>  </th>
+      <td mat-cell *matCellDef="let element"> 
+        <button mat-icon-button [matMenuTriggerFor]="menu" color="green2" aria-label="menu">
+          <mat-icon>more_vert</mat-icon>
+        </button>
+        <mat-menu id="menu" #menu="matMenu">
+          
+          <button mat-menu-item (click)="openEditMaquina(element)">
+            <mat-icon>edit</mat-icon>
+            <span>Editar</span>
+          </button>
+          <button (click)="excluirItem(element)" mat-menu-item>
+            <mat-icon  class="delete">delete</mat-icon>
+            <span>Excluir</span>
+          </button>
+          <button mat-menu-item>
+            <mat-icon>pie_chart</mat-icon>
+            <span>Relatorio de Desempenho</span>
+          </button>
+        </mat-menu>
+      </td>
+
+    </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+  </table>
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+</div>
+    
