refactor: Organizado código :art:

--- a/client/src/app/shared/components/menu/menu.component.html
+++ b/client/src/app/shared/components/menu/menu.component.html
@@ -20,14 +20,16 @@
                 </mat-panel-title>
                 <mat-icon>account_circle</mat-icon>
               </mat-expansion-panel-header>
-              <a routerLink="/main/maquina/cad-maquina">
-                <mat-list-item>
-                  Cadastrar Maquina
-                </mat-list-item>
-              </a>
+              
               <a routerLink="/main/maquina/list-maquina">
                 <mat-list-item >
-                  Listar Maquinas
+                  Maquinas
+                </mat-list-item>
+              </a>
+
+              <a routerLink="/main/maquina/list-abastecimento">
+                <mat-list-item >
+                  Abastecimento
                 </mat-list-item>
               </a>
             </mat-expansion-panel>
