feat: Adicionado Manutencao - Client :rocket: Adicionado cadastro de manutenção Adicionado lista de manutenção

--- a/client/src/app/shared/components/menu/menu.component.html
+++ b/client/src/app/shared/components/menu/menu.component.html
@@ -32,6 +32,11 @@
                   Abastecimento
                 </mat-list-item>
               </a>
+              <a routerLink="/main/maquina/list-manutenção">
+                <mat-list-item >
+                  Manutenção
+                </mat-list-item>
+              </a>
             </mat-expansion-panel>
           </mat-accordion>
 
