--- a/client/src/app/maquinario/maquina/cad-maquina/cad-maquina.component.html
+++ b/client/src/app/maquinario/maquina/cad-maquina/cad-maquina.component.html
@@ -1,7 +1,7 @@
     <form [formGroup]="form" class="card-content">
         <h2>{{isNew ? 'Cadastrar' : 'Alterar'}} Maquina</h2>
         <p>
-            <mat-form-field class="field-300" appearance="standard">
+            <mat-form-field color="outgreen" class="field-300" appearance="standard">
                 <mat-label>Nome</mat-label>
                 <input matInput  formControlName="nome" placeholder="exemplo: caminhão 03">
                 <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
@@ -9,19 +9,19 @@
             </mat-form-field>
         </p>
         <p>
-            <mat-form-field  class="field-300" appearance="standard">
+            <mat-form-field color="outgreen" class="field-300" appearance="standard">
                 <mat-label>Data da Aquisição</mat-label>
                 <input matInput  formControlName="ano" [matDatepicker]="picker">
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker startView="year" [startAt]="startDate"></mat-datepicker>
             </mat-form-field>
         </p>
-        <p>
-            <mat-form-field class="field-262" appearance="standard">
+        <p class="line">
+            <mat-form-field color="outgreen" class="field-262" appearance="standard">
                 <mat-label>Tipo de Maquinario</mat-label>
                 <mat-select formControlName="tipo" required>
                     <mat-option>--</mat-option>
-                    <mat-option *ngFor="let tipo of tipoMaquinas" [value]="tipo.tipo_maquina_id">
+                    <mat-option *ngFor="let tipo of tipoMaquinas" [value]="tipo.id">
                         {{tipo.nome}}
                     </mat-option>
                 </mat-select>
@@ -30,9 +30,9 @@
             </mat-form-field>
             <button class="button-add" (click)="openAddTipoMaquinario()" mat-mini-fab color="green"><mat-icon>add</mat-icon></button>
         </p>
-        <p class="button-flex-container">
+        <p class="line">
 
-            <mat-form-field class="field-262" appearance="standard">
+            <mat-form-field color="outgreen" class="field-262" appearance="standard">
                 <mat-label>Modelo</mat-label>
                 <mat-select  formControlName="modelo" required>
                     <mat-option>--</mat-option>
