--- a/client/src/app/maquinario/maquina/list-maquina/list-maquina.component.html
+++ b/client/src/app/maquinario/maquina/list-maquina/list-maquina.component.html
@@ -3,8 +3,8 @@
     <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
   </div>
   
-  <mat-form-field>
-    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filtro de pesquisa">
+  <mat-form-field color="outgreen"> 
+    <input matInput  (keyup)="applyFilter($event.target.value)" placeholder="Filtro de pesquisa">
   </mat-form-field>
   <!-- <button routerLink="/main/maquina/cad-maquina"  class="button-add" mat-fab color="darkgreen"> -->
   <button (click)="openCadMaquina()"  class="button-add" mat-fab color="darkgreen">
@@ -30,7 +30,7 @@
 
     <ng-container matColumnDef="marca">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Marca </th>
-      <td mat-cell *matCellDef="let element"> {{element.modelo_maquina_id}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.modelo_maquina.id}} </td>
     </ng-container>"
 
     <ng-container matColumnDef="modelo">
