--- a/client/src/app/maquinario/maquina/modelo-maquina/modelo-maquina.component.html
+++ b/client/src/app/maquinario/maquina/modelo-maquina/modelo-maquina.component.html
@@ -1,9 +1,9 @@
 <form class="form"  [formGroup]="form">
-    <mat-form-field class="full-width" appearance="fill">
+    <mat-form-field color="outgreen" class="full-width" appearance="fill">
       <mat-label>Modelo da Maquina</mat-label>
       <input matInput formControlName="nome" #message maxlength="256" placeholder="Ex. J145">
     </mat-form-field>
-    <mat-form-field class="full-width" appearance="standard">
+    <mat-form-field color="outgreen" class="full-width" appearance="standard">
       <mat-label>Marca de Maquinario</mat-label>
       <mat-select formControlName="marca" required>
           <mat-option>--</mat-option>
