--- a/client/src/app/maquinario/maquina/tipo-maquina/tipo-maquina.component.html
+++ b/client/src/app/maquinario/maquina/tipo-maquina/tipo-maquina.component.html
@@ -1,5 +1,5 @@
 <form class="form"  [formGroup]="form">
-    <mat-form-field class="full-width" appearance="fill">
+    <mat-form-field color="outgreen" class="full-width" appearance="fill">
       <mat-label>Tipo da Maquina</mat-label>
       <input matInput formControlName="nome" #message maxlength="256" placeholder="Ex. Trator">
     </mat-form-field>
