--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -26,25 +26,48 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .field-375{
     position: relative;
     min-width: 375px;
-    margin: 0;
+    margin: 0 5px;
     height: 50px;
 }
 .field-300{
     position: relative;
     min-width: 300px;
-    margin: 0;
+    margin: 0 5px;
     height: 50px;
 }
 .field-262{
     position: relative;
     min-width: 262px;
-    margin: 0;
+    margin: 0 5px;
     height: 50px;
 }
 .field-225{
     position: relative;
-    min-width: 225px;
-    margin: 0;
+    width: 225px;
+    margin: 0 15px;
+    height: 50px;
+}
+.field-180{
+    position: relative;
+    width: 180px;
+    max-width: 55%;
+    margin: 0 15px;
+    height: 50px;
+}
+.field-140{
+    position: relative;
+    width: 140px;
+    max-width: 45%;
+    margin: 0 15px;
     height: 50px;
 }
 
+.mat-outgreen.mat-focused .mat-form-field-label{
+    color: rgb(0, 75, 0) !important;
+}
+.mat-outgreen.mat-focused .mat-form-field-ripple{
+    background-color: rgba(0, 75, 0, 0.829) !important;
+}
+.mat-outgreen:hover {    
+    caret-color: rgba(2, 145, 2, 0.829);
+}
